@@ -1,5 +1,10 @@
 # $Id$
 
+2006-07-24	Denis Gabaidulin
+
+	* core/Base/Date.class.php: toISOString() method added.
+
+
 2007-07-23	Ivan Y. Khvostishkov
 
 	* global.inc.php.tpl: possible security hole fixed on autoload's
